app/Resources/public/less/components.less
@import "components/media-query.less";
@import "components/vertical-timeline.less";
@import "components/FOSCommentBundle.less";

// fix hack modal qui fait un padding pour rien
.modal-open .navbar-fixed-top,
.modal-open .navbar-fixed-bottom {
    padding-right: 17px;
}
body.modal-open {
    padding-right: 0 !important;
}

.dataTables_scroll {
        background-color: white !important;
        color: black !important;
}

.dataTable {
    img, > img {
        max-height: 4em;
    }
}

@media @phone-strict, @miniphone {
    .dataTables_filter {
        label {
            text-align: center !important;
        }

        input {
            display: block !important;
        }
    }
}

.panel-default {
    a {
        color: black !important;
    }
}

.webui-popover {
    color: black;

    a {
        color: @rouge !important;
    }
}

a.show_users {
    cursor: pointer;
    color: white;
    border-bottom: 1px dotted white;
}

.f-video-editor {
    position: relative;

    iframe {
        width: 320px;
        height: 160px;
        max-width: 100%;
        margin: 0 auto;

        @media @tablet {
            width: 640px;
            height: 320px;
        }
    }
}

.froala-view {
    > img, img {
        max-width: 100%;
    }
}

